API정보 칸 생성